Doing some cleanup

--- a/UnityProject/UnityVS.UnityProject.CSharp.csproj
+++ b/UnityProject/UnityVS.UnityProject.CSharp.csproj
@@ -7,16 +7,14 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{3514E80D-D975-03C0-3350-1935D6E531E2}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <AssemblyName>Assembly-CSharp</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -57,12 +55,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\CalibrateCameraTest.cs" />
+    <Compile Include="Assets\Calibration.cs" />
     <Compile Include="Assets\CalibrationCpp.cs" />
     <Compile Include="Assets\CrossHair.cs" />
     <Compile Include="Assets\FakeClick.cs" />
     <Compile Include="Assets\Rotation.cs" />
     <Compile Include="Assets\RotationConversion.cs" />
-    <Compile Include="Assets\TestScript.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2012\UnityVS.CSharp.targets" />
 </Project>
