adding method to record all points in a single file. This allows simple choosing of file path, as well as storing of other data such as normalised image coordinates

--- a/UnityProject/UnityVS.UnityProject.CSharp.csproj
+++ b/UnityProject/UnityVS.UnityProject.CSharp.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Assets\CrossHair.cs" />
     <Compile Include="Assets\MyExtensions.cs" />
     <Compile Include="Assets\PointsRecordReplay.cs" />
+    <Compile Include="Assets\Recording.cs" />
     <Compile Include="Assets\Rotation.cs" />
     <Compile Include="Assets\RotationConversion.cs" />
     <Compile Include="Assets\SerializableVector3.cs" />
