--- a/UnityProject/UnityVS.UnityProject.CSharp.csproj
+++ b/UnityProject/UnityVS.UnityProject.CSharp.csproj
@@ -7,16 +7,14 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{3514E80D-D975-03C0-3350-1935D6E531E2}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <AssemblyName>Assembly-CSharp</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -61,10 +59,16 @@
     <Compile Include="Assets\DrawLine.cs" />
     <Compile Include="Assets\MyExtensions.cs" />
     <Compile Include="Assets\PointsRecordReplay.cs" />
+    <Compile Include="Assets\ProjectionController.cs" />
     <Compile Include="Assets\Recording.cs" />
     <Compile Include="Assets\Rotation.cs" />
     <Compile Include="Assets\RotationConversion.cs" />
     <Compile Include="Assets\SerializableVector3.cs" />
+    <Compile Include="Assets\TextureCube.cs" />
+    <None Include="Assets\Standard Assets\Projectors\Guidelines.txt" />
+    <None Include="Assets\Standard Assets\Projectors\Sources\Shaders\Projector Light.shader" />
+    <None Include="Assets\Standard Assets\Projectors\Sources\Shaders\Projector Multiply.shader" />
+    <None Include="Assets\Unlit.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2012\UnityVS.CSharp.targets" />
 </Project>
